--- a/index.html
+++ b/index.html
@@ -92,15 +92,15 @@
             <div class="about-firm-screen__text">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
             </div>
-            <div class="about-firm-screen__imagebox">
-                <div class="about-firm-screen__image">
+            <div class="person">
+                <div class="person__image">
                     <img src="img/stephen-collier.jpg" alt="">
                 </div>
-                <div class="about-firm-screen__imagebox-text">
-                    <div class="about-firm-screen__imagebox-title">
+                <div class="person__desc">
+                    <div class="person__name">
                         <p>Stephen Collier</p>
                     </div>
-                    <div class="about-firm-screen__imagebox-title-small">
+                    <div class="person__qualification">
                         <p>Senior Partner</p>
                     </div>
                 </div>
@@ -196,7 +196,7 @@
 
     <section class="customers-section big-container">
 
-        <div class="customers-section__container">
+        <div class="container customers-section__container">
 
             <div class='customers-section__text'>
                 <div class="customers-section__short-title">
@@ -315,92 +315,141 @@
 
 <!-- featured-projects - end -->
 
-<!-- our-team - start -->
+<!-- team-section - start -->
 
-    <section class="our-team">
-
-        <div class="our-team_text ">
-            <div class="our-team_title">
-                Meet our team
+    <section class="team-section">
+        <div class="team-section_container big-container">
+            <div class="team-desc">
+                <h5 class="team-desc_title">
+                    Meet our team
+                </h5>
+                <p class="team-desc_text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis.
+                </p>
+                <a href="" class="team-sesc_btn">
+                    See team
+                </a>
             </div>
-            <div class="our-team_content">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis.
-            </div>
-            <div class="our-team_short-title">
-                See team
+            <div class="team-persons">
+                <div class="col">    
+                    <div class="person">
+                        <div class="person__image">
+                            <img src="img/stephen-collier.jpg" alt="">
+                        </div>
+                        <div class="person__desc">
+                            <div class="person__name">
+                                <p>Stephen Collier</p>
+                            </div>
+                            <div class="person__qualification">
+                                <p>Senior Partner</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="person">
+                        <div class="person__image">
+                            <img src="img/stephen-collier.jpg" alt="">
+                        </div>
+                        <div class="person__desc">
+                            <div class="person__name">
+                                <p>Stephen Collier</p>
+                            </div>
+                            <div class="person__qualification">
+                                <p>Senior Partner</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="person">
+                        <div class="person__image">
+                            <img src="img/stephen-collier.jpg" alt="">
+                        </div>
+                        <div class="person__desc">
+                            <div class="person__name">
+                                <p>Stephen Collier</p>
+                            </div>
+                            <div class="person__qualification">
+                                <p>Senior Partner</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="person">
+                        <div class="person__image">
+                            <img src="img/stephen-collier.jpg" alt="">
+                        </div>
+                        <div class="person__desc">
+                            <div class="person__name">
+                                <p>Stephen Collier</p>
+                            </div>
+                            <div class="person__qualification">
+                                <p>Senior Partner</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="person">
+                        <div class="person__image">
+                            <img src="img/stephen-collier.jpg" alt="">
+                        </div>
+                        <div class="person__desc">
+                            <div class="person__name">
+                                <p>Stephen Collier</p>
+                            </div>
+                            <div class="person__qualification">
+                                <p>Senior Partner</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="our-team_images">
-            <div class="our-team_items">
-                <div class="our-team_item-img">
-                    <img src="img/stephen-collier.jpg" alt="">
-                </div>
-                <div class="our-team_item-text">
-                    <div class="our-team_item-title">
-                        Stephen Collier
-                    </div>
-                    <div class="our-team_item-content">
-                        Senior Partner
-                    </div>
-                </div>
-            </div>
-            <div class="our-team_items">
-                <div class="our-team_item-img">
-                    <img src="img/ferris-wonder.jpg" alt="">
-                </div>
-                <div class="our-team_item-text">
-                    <div class="our-team_item-title">
-                        Ferris Wonder
-                    </div>
-                    <div class="our-team_item-content">
-                        Associate Partner
-                    </div>
-                </div>
-            </div>
-            <div class="our-team_items">
-                <div class="our-team_item-img">
-                    <img src="img/niko-ferry.jpg" alt="">
-                </div>
-                <div class="our-team_item-text">
-                    <div class="our-team_item-title">
-                        Niko Ferry
-                    </div>
-                    <div class="our-team_item-content">
-                        Partner
-                    </div>
-                </div>
-            </div>
-            <div class="our-team_items">
-                <div class="our-team_item-img">
-                    <img src="img/nolan-peters.jpg" alt="">
-                </div>
-                <div class="our-team_item-text">
-                    <div class="our-team_item-title">
-                        Nolan Peters
-                    </div>
-                    <div class="our-team_item-content">
-                        Associate
-                    </div>
-                </div>
-            </div>
-            <div class="our-team_items">
-                <div class="our-team_item-img">
-                    <img src="img/aria-stone.jpg" alt="">
-                </div>
-                <div class="our-team_item-text">
-                    <div class="our-team_item-title">
-                        Aria Stone
-                    </div>
-                    <div class="our-team_item-content">
-                        Senior Partner
-                    </div>
-                </div>
-            </div>
-        </div>
-
     </section>
 
-<!-- our-team - end -->
+<!-- team-section - end -->
+
+    <section class="question">
+        <div class="question-container big-container">
+            <div class="question-container_text">
+                <div class="question-container_title">
+                    Get in touch
+                </div>
+                <div class="question-container_item">
+                    Think we would be a good fit for your next project?
+                </div>
+            </div>
+            <a href="" class="question-container_btn">
+                Get in touch
+            </a>
+        </div>
+    </section>
+
+    <section class="last-section">
+        <div class="last-section_container big-container">
+            <div class="last-section_inner">
+                <div class="last-section_title">
+                    <img src="img/logo.svg" alt="">
+                </div>
+                <div class="last-section_text">
+                    <div class="last-section_text-part1">
+                        Powered by Webflow.
+                    </div>
+                    <div class="last-section_text-part2">
+                        All rights reserved Wishbone+Partners, Inc. Licensing.
+                    </div>
+                </div>
+            </div>
+            <div class="last-section_icons">
+                <div class="last-section_icon">
+                    <img src="img/twitter.svg" alt="">
+                </div>
+                <div class="last-section_icon">
+                    <img src="img/instagram.svg" alt="">
+                </div>
+                <div class="last-section_icon">
+                    <img src="img/facebook.svg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
 
 </body>
 
